--- a/1.html
+++ b/1.html
@@ -69,9 +69,9 @@
 <body>
     <div class="profile-card">
         <img src="https://png.pngtree.com/png-clipart/20230811/original/pngtree-female-profile-job-girl-vector-picture-image_10398968.png" alt="Profile Picture">
-        <h2>JAHANAVI</h2>
-        <p>Web Developer</p>
-        <p>"Iâ€™m interested in web development because I enjoy the combination of creativity and technical problem-solving it offers. The ability to design user-friendly websites and applications that are both visually appealing and functional excites me. I am particularly drawn to learning how different technologies, such as HTML, CSS, and JavaScript, work together to create seamless online experiences. As I continue to explore this field, I look forward to improving my skills and contributing to innovative web projects."</p>
+        <h2>Jahanavi</h2>
+        <p>Lab Programmer</p>
+        <p>."currently Am working as Lab Programmer i have teach  python, database mangement system, and Java on these Programming knowledge I am particularly drawn in learning different technologies, My goal is to. I look forward to improving my skills and contributing to innovative web projects."</p>
         <div class="social">
             <a href="#" target="_blank">&#x1F426;</a>
             <a href="#" target="_blank">&#x1F4F1;</a>
